--- a/Bootstrap/css/style.css
+++ b/Bootstrap/css/style.css
@@ -1,3 +1,7 @@
+body {
+    font-family: 'Roboto', sans-serif;
+}
+
 .navbar {
     border-bottom: #85C1E9 solid 5px;
 }
@@ -19,9 +23,18 @@
 #header {
     background: url('/Bootstrap/image/la.jpg') no-repeat;
     background-size: cover;
-    height: 100vh;
+    height: 125vh;
 }
 
-h1{
-    margin-top: 20px;
+h1 {
+    margin-top: 50px;
+}
+
+#header .overlay {
+    background-color: rgba(244, 255, 254, 0.8);
+    height: 125vh;
+}
+
+.btn-outline-secondary:hover {
+    background-color: #85C1E9;
 }
